[package]
name = "docuum"
version = "0.25.1"
authors = ["Stephan Boyer <stephan@stephanboyer.com>"]
edition = "2024"
description = "LRU eviction of Docker images."
license = "MIT"
documentation = "https://github.com/stepchowfun/docuum"
homepage = "https://github.com/stepchowfun/docuum"
repository = "https://github.com/stepchowfun/docuum"
readme = "README.md"

[lints]
clippy.all = { level = "deny", priority = -1 }
clippy.default_numeric_fallback = "deny"
clippy.pedantic = { level = "deny", priority = -1 }
rust.warnings = "deny"

[dependencies]
atty = "0.2"
byte-unit = "4"
chrono = "0.4"
colored = "2"
dirs = "3"
env_logger = { version = "0.8", default-features = false, features = ["termcolor", "atty"] }
log = "0.4"
regex = { version = "1.5.5", default-features = false, features = ["std", "unicode-perl"] }
serde_json = "1.0"
serde_yaml = "0.8"
tempfile = "3"
humantime = "2.2.0"
bollard = { version = "0.16" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
sysinfo = "0.23.5"

[dependencies.clap]
version = "2"
features = ["wrap_help"]

[dependencies.ctrlc]
version = "3"
features = ["termination"] # [tag:ctrlc_term]

[dependencies.serde]
version = "1"
features = ["derive"]

[profile.release]
strip = true
