[package]
name = "docuum"
version = "0.27.0"
authors = ["Stephan Boyer <stephan@stephanboyer.com>"]
edition = "2024"
description = "LRU eviction of Docker images."
license = "MIT"
documentation = "https://github.com/stepchowfun/docuum"
homepage = "https://github.com/stepchowfun/docuum"
repository = "https://github.com/stepchowfun/docuum"
readme = "README.md"

[lints]
clippy.all = { level = "deny", priority = -1 }
clippy.default_numeric_fallback = "deny"
clippy.pedantic = { level = "deny", priority = -1 }
rust.warnings = "deny"

[dependencies]
byte-unit = "5"
chrono = "0.4"
clap = { version = "4", features = ["derive", "wrap_help"] }
colored = "3"
dirs = "6"
env_logger = "0.11"
humantime = "2"
log = "0.4"
regex = { version = "1", default-features = false, features = ["std", "unicode-perl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"

[target.'cfg(target_os = "linux")'.dependencies]
sysinfo = "0.38"

[dependencies.ctrlc]
version = "3"
features = ["termination"] # [tag:ctrlc_term]
