[package]
name = "docuum"
version = "0.27.0"
authors = ["Stephan Boyer <stephan@stephanboyer.com>"]
edition = "2024"
description = "LRU eviction of Docker images."
license = "MIT"
documentation = "https://github.com/stepchowfun/docuum"
homepage = "https://github.com/stepchowfun/docuum"
repository = "https://github.com/stepchowfun/docuum"
readme = "README.md"

[lints]
clippy.all = { level = "deny", priority = -1 }
clippy.default_numeric_fallback = "deny"
clippy.pedantic = { level = "deny", priority = -1 }
rust.warnings = "deny"

[dependencies]
byte-unit = "5.2.5"
chrono = "0.4.45"
clap = { version = "4.6.2", features = ["derive", "wrap_help"] }
colored = "3.1.1"
dirs = "6.0.0"
env_logger = "0.11.11"
humantime = "2.4.0"
log = "0.4.33"
regex = { version = "1.13.1", default-features = false, features = ["std", "unicode-perl"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
yaml_serde = "0.10.4"
tempfile = "3.27.0"

[target.'cfg(target_os = "linux")'.dependencies]
sysinfo = "0.39.6"

[dependencies.ctrlc]
version = "3.5.2"
features = ["termination"] # [tag:ctrlc_term]
